--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
   </head>
   <body>
     <div class="status-bar">
-      <div class="status-bar__column"></div>
-      <span>No Service</span>
-      <i class="fas fa-wifi"></i>
-      <div class="status-bar__column"></div>
-      <span>18:43</span>
-      <div class="status-bar__column"></div>
-      <span>110%</span>
-      <i class="fas fa-battery-full"></i>
-      <i class="fas fa-bolt"></i>
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
     </div>
-
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
       <p class="welcome-header__text">
-        if yuo have a Kakao Account, log in with your email or phone number.
+        if you have a Kakao Account, log in with your email or phone number.
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
-      <a href="#">Find kakao Accout ot Password</a>
+      <a href="#">Find kakao Accout or Password</a>
     </form>
 
     <script
